WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71032
REGRESSION(
r98542
): tables/mozilla_expected_failures/bugs/
bug14007
-2.html
https://bugs.webkit.org/show_bug.cgi?id=71032
Summary
REGRESSION(r98542): tables/mozilla_expected_failures/bugs/bug14007-2.html
Ryosuke Niwa
Reported
2011-10-27 10:13:00 PDT
Chromium bots tells me that
r98542
broke tables/mozilla_expected_failures/bugs/
bug14007
-2.html
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=tables%2Fmozilla_expected_failures%2Fbugs%2Fbug14007-2.html
Attachments
patch
(5.66 KB, patch)
2011-10-27 11:54 PDT
,
Antti Koivisto
hyatt
: review+
Details
Formatted Diff
Diff
better, more explicit test
(2.80 KB, patch)
2011-10-28 07:49 PDT
,
Antti Koivisto
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2011-10-27 11:54:58 PDT
Created
attachment 112718
[details]
patch
Dave Hyatt
Comment 2
2011-10-27 12:05:26 PDT
Comment on
attachment 112718
[details]
patch r=me
Antti Koivisto
Comment 3
2011-10-27 12:16:31 PDT
http://trac.webkit.org/changeset/98615
Antti Koivisto
Comment 4
2011-10-28 07:49:45 PDT
Created
attachment 112863
[details]
better, more explicit test
Ryosuke Niwa
Comment 5
2011-10-28 09:28:10 PDT
Comment on
attachment 112863
[details]
better, more explicit test View in context:
https://bugs.webkit.org/attachment.cgi?id=112863&action=review
> LayoutTests/fast/css/inherited-properties-explicit.html:36 > +These should be 0px, 0px, 5px, 5px, 10px, 10px:
Instead of stating expectations here
> LayoutTests/fast/css/inherited-properties-explicit.html:49 > +test('test1a', 'margin-left'); > +test('test1b', 'margin-left'); > +test('test2a', 'margin-left'); > +test('test2b', 'margin-left'); > +test('test3a', 'margin-left'); > +test('test3b', 'margin-left');
Can we just call shouldBe here? (i.e. turn this into a script test.
Antti Koivisto
Comment 6
2011-10-29 00:59:16 PDT
http://trac.webkit.org/changeset/98800(In
reply to
comment #5
)
> Can we just call shouldBe here? (i.e. turn this into a script test.
Yeah, did this.
http://trac.webkit.org/changeset/98800
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug