REGRESSION(r98542): tables/mozilla_expected_failures/bugs/bug14007-2.html https://bugs.webkit.org/show_bug.cgi?id=71032

Reviewed by Dave Hyatt.

If we apply an explicitly inherited property, we need to apply any further
non-inherited properties as the property might get overridden again.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::styleForKeyframe):
(WebCore::CSSStyleSelector::styleForPage):
(WebCore::CSSStyleSelector::applyDeclaration):
(WebCore::CSSStyleSelector::applyDeclarations):
* css/CSSStyleSelector.h:



Canonical link: https://commits.webkit.org/87247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98615 268f45cc-cd09-0410-ab3c-d52691b4dbfc